@@ -21,11 +21,11 @@ import (
 	"fmt"
 	"io"
 	"os"
-	//"bitbucket.org/cmars/go.crypto/openpgp"
-	"bitbucket.org/cmars/go.crypto/openpgp/packet"
+	//"code.google.com/p/go.crypto/openpgp"
+	"code.google.com/p/go.crypto/openpgp/packet"
 	// importing these hash algorithms ensures they are registered at runtime
-	_ "bitbucket.org/cmars/go.crypto/md4"
-	_ "bitbucket.org/cmars/go.crypto/ripemd160"
+	_ "code.google.com/p/go.crypto/md4"
+	_ "code.google.com/p/go.crypto/ripemd160"
 	_ "crypto/md5"
 	_ "crypto/sha1"
 	_ "crypto/sha256"
